<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
                android:id="@+id/tournament"
                android:title="@string/choose_best_film"
                android:icon="@drawable/outline_star_24" />

        <item
                android:id="@+id/lovely"
                android:title="@string/lovely_films"
                android:icon="@drawable/bookmark_24" />


        <item
                android:id="@+id/addFav"
                android:title="@string/find_movies"
                android:icon="@drawable/search_24" />

    </group>

    <group>

        <item
                android:id="@+id/game"
                android:title="@string/game_higher_lower">
            <menu>
                <item
                        android:id="@+id/budget"
                        android:title="@string/popularity" />
                <item
                        android:id="@+id/rating"
                        android:title="@string/rating" />
            </menu>
        </item>

    </group>

    <group android:id="@+id/settings_menu">

        <item
                android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/settings_24" />

    </group>
</menu>