<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="filmId"
            type="com.example.finema.models.movieResponse.MovieDetails" />
    </data>


    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent">-->

    <!--        <ProgressBar-->
    <!--            android:id="@+id/filmLoader"-->
    <!--            android:layout_width="80dp"-->
    <!--            android:layout_height="80dp"-->
    <!--            android:indeterminateTint="@color/purple_200"-->
    <!--            android:progressTint="@color/purple_200"-->
    <!--            android:layout_gravity="center"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent" />-->

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:layout_gravity="center"

            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_corner_elevation">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:scaleType="fitCenter"

                app:srcCompat="@drawable/movies_24" />
        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkFavourite"
                    android:text="@string/lovely_films"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/filmTitle"
                    android:text="@{filmId.title}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/aboutTitle"
                    android:text="@string/about_film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview"
                    android:text="@{filmId.overview}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/genreTitle"
                    android:text="@string/genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genres"
                    android:text="@{filmId.stringGenres}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/ratingTitle"
                    android:text="@string/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="10dp"
                    tools:text="10.0" />

                <TextView
                    android:id="@+id/companiesTitle"
                    android:text="@string/companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:text="@{filmId.stringCompanies}" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->

</layout>